Адаптив профиль и настройки

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,157 +5,235 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.profileFragment"
-    android:background="@drawable/background">
+    android:background="@drawable/background"
+    >
 
-    <ImageButton
-        android:id="@+id/wentBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/arrow_left"
-        android:background="@android:color/transparent"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="25dp"
-        />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        style="@style/zagalovok1"
-        android:id="@+id/profileText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/wentBack"
-        app:layout_constraintEnd_toStartOf="@id/confirm"
-        app:layout_constraintTop_toTopOf="@id/wentBack"
-        app:layout_constraintBottom_toBottomOf="@id/wentBack"
-        android:text="@string/profile"
-        android:textColor="@color/textcolor_black"
-        />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp"
+            >
 
-    <ImageButton
-        android:id="@+id/confirm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/confirm"
-        android:background="@android:color/transparent"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="25dp"
-        />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/margin_main1"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="15dp"
+                />
 
-    <ImageView
-        android:id="@+id/profileImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="100dp"
-        android:src="@drawable/profile_image_big"
-        android:background="@android:color/transparent"
-        />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/margin_main2"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                app:layout_constraintGuide_end="15dp"
+                />
 
-    <ImageView
-        android:id="@+id/boxName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/profileImage"
-        android:layout_marginTop="26dp"
-        android:src="@drawable/medicinies_nutrition_box"
-        />
+            <ImageButton
+                android:id="@+id/wentBack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/margin_main1"
+                app:layout_constraintTop_toTopOf="parent"
+                android:src="@drawable/arrow_left"
+                android:background="@android:color/transparent"
+                android:layout_marginTop="30dp"
+                />
 
-    <EditText
-        style="@style/tint1"
-        android:id="@+id/nameText"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="@id/boxName"
-        app:layout_constraintTop_toTopOf="@id/boxName"
-        app:layout_constraintBottom_toBottomOf="@id/boxName"
-        app:layout_constraintEnd_toEndOf="@id/boxName"
-        android:hint="@string/name"
-        android:textColor="@color/tint_color"
-        android:background="@android:color/transparent"
-        android:paddingStart="10dp"
-        />
+            <TextView
+                style="@style/zagalovok1"
+                android:id="@+id/profileText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@id/wentBack"
+                app:layout_constraintEnd_toStartOf="@id/confirm"
+                app:layout_constraintTop_toTopOf="@id/wentBack"
+                app:layout_constraintBottom_toBottomOf="@id/wentBack"
+                android:text="@string/profile"
+                android:textColor="@color/textcolor_greyblack"
+                />
 
-    <ImageView
-        android:id="@+id/boxAge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/boxName"
-        android:layout_marginTop="16dp"
-        android:src="@drawable/medicinies_nutrition_box"
-        />
+            <ImageButton
+                android:id="@+id/confirm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="@id/margin_main2"
+                app:layout_constraintTop_toTopOf="parent"
+                android:src="@drawable/confirm"
+                android:background="@android:color/transparent"
+                android:layout_marginTop="30dp"
+                />
 
-    <EditText
-        style="@style/tint1"
-        android:id="@+id/ageText"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="@id/boxAge"
-        app:layout_constraintTop_toTopOf="@id/boxAge"
-        app:layout_constraintBottom_toBottomOf="@id/boxAge"
-        app:layout_constraintEnd_toEndOf="@id/boxAge"
-        android:hint="@string/age"
-        android:textColor="@color/tint_color"
-        android:background="@android:color/transparent"
-        android:paddingStart="10dp"
-        />
+            <ImageView
+                android:id="@+id/profileImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="100dp"
+                android:src="@drawable/profile_image_big"
+                android:background="@android:color/transparent"
+                />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/nameBox"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                app:layout_constraintStart_toStartOf="@id/margin_main1"
+                app:layout_constraintEnd_toEndOf="@id/margin_main2"
+                app:layout_constraintTop_toBottomOf="@id/profileImage"
+                android:layout_marginTop="26dp">
 
-    <ImageView
-        android:id="@+id/boxHeight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/boxAge"
-        app:layout_constraintTop_toBottomOf="@id/boxAge"
-        android:layout_marginTop="16dp"
-        android:src="@drawable/height_weight_box"
-        />
+                <ImageView
+                    android:id="@+id/nameImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="77dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:src="@drawable/box"
+                    />
 
-    <EditText
-        style="@style/tint1"
-        android:id="@+id/heightText"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="@id/boxHeight"
-        app:layout_constraintTop_toTopOf="@id/boxHeight"
-        app:layout_constraintBottom_toBottomOf="@id/boxHeight"
-        app:layout_constraintEnd_toEndOf="@id/boxHeight"
-        android:hint="@string/height"
-        android:textColor="@color/tint_color"
-        android:background="@android:color/transparent"
-        android:paddingStart="10dp"
-        />
+                <EditText
+                    style="@style/tint1"
+                    android:id="@+id/nameText"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    app:layout_constraintStart_toStartOf="@id/nameImage"
+                    app:layout_constraintTop_toTopOf="@id/nameImage"
+                    app:layout_constraintBottom_toBottomOf="@id/nameImage"
+                    app:layout_constraintEnd_toEndOf="@id/nameImage"
+                    android:hint="@string/name"
+                    android:textColor="@color/tint_color"
+                    android:background="@android:color/transparent"
+                    android:paddingStart="15dp"
+                    />
 
-    <ImageView
-        android:id="@+id/boxWeight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="@id/boxAge"
-        app:layout_constraintTop_toBottomOf="@id/boxAge"
-        android:layout_marginTop="16dp"
-        android:src="@drawable/height_weight_box"
-        />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <EditText
-        style="@style/tint1"
-        android:id="@+id/weightText"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="@id/boxWeight"
-        app:layout_constraintTop_toTopOf="@id/boxWeight"
-        app:layout_constraintBottom_toBottomOf="@id/boxWeight"
-        app:layout_constraintEnd_toEndOf="@id/boxWeight"
-        android:hint="@string/weight"
-        android:textColor="@color/tint_color"
-        android:background="@android:color/transparent"
-        android:paddingStart="10dp"
-        />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/ageBox"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                app:layout_constraintStart_toStartOf="@id/margin_main1"
+                app:layout_constraintEnd_toEndOf="@id/margin_main2"
+                app:layout_constraintTop_toBottomOf="@id/nameBox"
+                android:layout_marginTop="16dp">
+
+                <ImageView
+                    android:id="@+id/ageImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="77dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:src="@drawable/box"
+                    />
+
+                <EditText
+                    style="@style/tint1"
+                    android:id="@+id/ageText"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    app:layout_constraintStart_toStartOf="@id/ageImage"
+                    app:layout_constraintTop_toTopOf="@id/ageImage"
+                    app:layout_constraintBottom_toBottomOf="@id/ageImage"
+                    app:layout_constraintEnd_toEndOf="@id/ageImage"
+                    android:hint="@string/age"
+                    android:textColor="@color/tint_color"
+                    android:background="@android:color/transparent"
+                    android:paddingStart="15dp"
+                    />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/heightBox"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                app:layout_constraintStart_toStartOf="@id/margin_main1"
+                app:layout_constraintEnd_toStartOf="@id/weightBox"
+                app:layout_constraintTop_toBottomOf="@id/ageBox"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="15dp"
+                >
+
+                <ImageView
+                    android:id="@+id/heightImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="77dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:src="@drawable/box"
+                    />
+
+                <EditText
+                    style="@style/tint1"
+                    android:id="@+id/heightText"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    app:layout_constraintStart_toStartOf="@id/heightImage"
+                    app:layout_constraintTop_toTopOf="@id/heightImage"
+                    app:layout_constraintBottom_toBottomOf="@id/heightImage"
+                    app:layout_constraintEnd_toEndOf="@id/heightImage"
+                    android:hint="@string/height"
+                    android:textColor="@color/tint_color"
+                    android:background="@android:color/transparent"
+                    android:paddingStart="15dp"
+                    />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/weightBox"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                app:layout_constraintStart_toEndOf="@id/heightBox"
+                app:layout_constraintEnd_toEndOf="@id/margin_main2"
+                app:layout_constraintTop_toBottomOf="@id/ageBox"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="15dp"
+                >
+
+                <ImageView
+                    android:id="@+id/weightImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="77dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:src="@drawable/box"
+                    />
+
+                <EditText
+                    style="@style/tint1"
+                    android:id="@+id/weightText"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    app:layout_constraintStart_toStartOf="@id/weightImage"
+                    app:layout_constraintTop_toTopOf="@id/weightImage"
+                    app:layout_constraintBottom_toBottomOf="@id/weightImage"
+                    app:layout_constraintEnd_toEndOf="@id/weightImage"
+                    android:hint="@string/weight"
+                    android:textColor="@color/tint_color"
+                    android:background="@android:color/transparent"
+                    android:paddingStart="15dp"
+                    />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
