--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -8,152 +8,90 @@
     android:background="@drawable/background"
     >
 
-    <ImageButton
-        android:id="@+id/wentBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/arrow_left"
-        android:background="@android:color/transparent"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="25dp"
-        />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <ImageButton
-        android:id="@+id/profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/icon_profile"
-        android:background="@android:color/transparent"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="25dp"
-        />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp">
 
-    <TextView
-        style="@style/zagalovok1"
-        android:id="@+id/settingsText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/wentBack"
-        app:layout_constraintEnd_toEndOf="@id/profile"
-        app:layout_constraintTop_toTopOf="@id/wentBack"
-        app:layout_constraintBottom_toBottomOf="@id/wentBack"
-        android:text="@string/settings"
-        android:textColor="@color/textcolor_black"
-        />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/margin_main1"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="15dp"
+                />
 
-    <ImageView
-        android:id="@+id/box"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/settings_box"
-        android:layout_marginTop="125dp"
-        />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/margin_main2"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                app:layout_constraintGuide_end="15dp"
+                />
 
-    <ImageView
-        android:id="@+id/checkboxWeight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/box"
-        app:layout_constraintTop_toTopOf="@id/box"
-        android:src="@drawable/checkbox"
-        android:background="@android:color/transparent"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="23dp"
-        />
+            <ImageButton
+                android:id="@+id/wentBack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/margin_main1"
+                app:layout_constraintTop_toTopOf="parent"
+                android:src="@drawable/arrow_left"
+                android:background="@android:color/transparent"
+                android:layout_marginTop="30dp"
+                />
 
-    <TextView
-        style="@style/zagalovok2"
-        android:id="@+id/weightText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/checkboxWeight"
-        app:layout_constraintTop_toTopOf="@id/checkboxWeight"
-        app:layout_constraintBottom_toBottomOf="@id/checkboxWeight"
-        android:text="@string/weight"
-        android:textColor="@color/textcolor_black"
-        android:layout_marginStart="13dp"
-        />
+            <ImageButton
+                android:id="@+id/profile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="@id/margin_main2"
+                app:layout_constraintTop_toTopOf="parent"
+                android:src="@drawable/icon_profile"
+                android:background="@android:color/transparent"
+                android:layout_marginTop="30dp"
+                />
 
-    <ImageView
-        android:id="@+id/checkboxSleep"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/box"
-        app:layout_constraintTop_toBottomOf="@id/checkboxWeight"
-        android:src="@drawable/checkbox"
-        android:background="@android:color/transparent"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="46dp"
-        />
+            <TextView
+                style="@style/zagalovok1"
+                android:id="@+id/settingsText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/wentBack"
+                app:layout_constraintEnd_toEndOf="@id/profile"
+                app:layout_constraintTop_toTopOf="@id/wentBack"
+                app:layout_constraintBottom_toBottomOf="@id/wentBack"
+                android:text="@string/settings"
+                android:textColor="@color/textcolor_black"
+                />
 
-    <TextView
-        style="@style/zagalovok2"
-        android:id="@+id/sleepText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/checkboxSleep"
-        app:layout_constraintTop_toTopOf="@id/checkboxSleep"
-        app:layout_constraintBottom_toBottomOf="@id/checkboxSleep"
-        android:text="@string/sleep"
-        android:textColor="@color/textcolor_black"
-        android:layout_marginStart="13dp"
-        />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                app:layout_constraintStart_toStartOf="@id/margin_main1"
+                app:layout_constraintEnd_toEndOf="@id/margin_main2"
+                app:layout_constraintTop_toBottomOf="@id/wentBack"
+                android:layout_marginTop="50dp"
+                >
+                
+                <ImageView
+                    android:id="@+id/settingsBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="650dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:src="@drawable/box"
+                    />
 
-    <ImageView
-        android:id="@+id/checkboxCardio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/box"
-        app:layout_constraintTop_toBottomOf="@id/checkboxSleep"
-        android:src="@drawable/checkbox"
-        android:background="@android:color/transparent"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="46dp"
-        />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <TextView
-        style="@style/zagalovok2"
-        android:id="@+id/cardioText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/checkboxCardio"
-        app:layout_constraintTop_toTopOf="@id/checkboxCardio"
-        app:layout_constraintBottom_toBottomOf="@id/checkboxCardio"
-        android:text="@string/cardio"
-        android:textColor="@color/textcolor_black"
-        android:layout_marginStart="13dp"
-        />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ImageView
-        android:id="@+id/checkboxMedecines"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/box"
-        app:layout_constraintTop_toBottomOf="@id/checkboxCardio"
-        android:src="@drawable/checkbox"
-        android:background="@android:color/transparent"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="46dp"
-        />
-
-    <TextView
-        style="@style/zagalovok2"
-        android:id="@+id/medecineText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/checkboxMedecines"
-        app:layout_constraintTop_toTopOf="@id/checkboxMedecines"
-        app:layout_constraintBottom_toBottomOf="@id/checkboxMedecines"
-        android:text="@string/taking_pills"
-        android:textColor="@color/textcolor_black"
-        android:layout_marginStart="13dp"
-        />
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
