--- a/app/src/main/res/drawable-night/arrow_left.xml
+++ b/app/src/main/res/drawable-night/arrow_left.xml
@@ -2,10 +2,10 @@
     android:viewportWidth="54" android:width="48dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#00000000"
         android:pathData="M27,51C40.255,51 51,40.255 51,27C51,13.745 40.255,3 27,3C13.745,3 3,13.745 3,27C3,40.255 13.745,51 27,51Z"
-        android:strokeColor="#000000" android:strokeLineCap="round"
+        android:strokeColor="#ffffff" android:strokeLineCap="round"
         android:strokeLineJoin="round" android:strokeWidth="5.06041"/>
     <path android:fillColor="#00000000"
         android:pathData="M30.024,35.472L21.576,27L30.024,18.528"
-        android:strokeColor="#000000" android:strokeLineCap="round"
+        android:strokeColor="#ffffff" android:strokeLineCap="round"
         android:strokeLineJoin="round" android:strokeWidth="5.06041"/>
 </vector>
