--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -47,7 +47,7 @@
                 android:id="@+id/profile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/icon_profile"
+                android:src="@drawable/profile"
                 android:background="@android:color/transparent"
                 app:layout_constraintEnd_toEndOf="@id/margin_main2"
                 app:layout_constraintTop_toTopOf="parent"
@@ -64,8 +64,6 @@
                 app:layout_constraintTop_toBottomOf="@id/settings"
                 android:layout_marginTop="20dp"
                 android:text="@string/nearest_act"
-                android:textColor="@color/textcolor_greyblack"
-
                 />
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -104,13 +102,15 @@
 
             <ImageView
                 android:id="@+id/todayTextBackground"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="30dp"
                 app:layout_constraintStart_toStartOf="@id/todayText"
                 app:layout_constraintEnd_toEndOf="@id/todayText"
                 app:layout_constraintTop_toTopOf="@id/todayText"
                 app:layout_constraintBottom_toBottomOf="@id/todayText"
-                android:src="@drawable/day_btn_background"
+                android:layout_marginStart="-10dp"
+                android:layout_marginEnd="-10dp"
+                android:src="@drawable/sleep_box"
                 />
 
             <TextView
@@ -129,13 +129,15 @@
 
             <ImageView
                 android:id="@+id/weekTextBackground"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="30dp"
                 app:layout_constraintStart_toStartOf="@id/weekText"
                 app:layout_constraintEnd_toEndOf="@id/weekText"
                 app:layout_constraintTop_toTopOf="@id/weekText"
                 app:layout_constraintBottom_toBottomOf="@id/weekText"
-                android:src="@drawable/week_btn_background"
+                android:src="@drawable/sleep_box"
+                android:layout_marginStart="-10dp"
+                android:layout_marginEnd="-10dp"
                 android:visibility="gone"
                 />
 
@@ -148,20 +150,21 @@
                 app:layout_constraintTop_toBottomOf="@id/nearestActBox"
                 android:text="@string/_week"
                 android:gravity="center"
-                android:textColor="@color/textcolor_greyblack"
                 android:layout_marginTop="20dp"
                 android:layout_marginStart="27dp"
                 />
 
             <ImageView
                 android:id="@+id/monthTextBackground"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="30dp"
                 app:layout_constraintStart_toStartOf="@id/monthText"
                 app:layout_constraintEnd_toEndOf="@id/monthText"
                 app:layout_constraintTop_toTopOf="@id/monthText"
                 app:layout_constraintBottom_toBottomOf="@id/monthText"
-                android:src="@drawable/week_btn_background"
+                android:layout_marginStart="-10dp"
+                android:layout_marginEnd="-10dp"
+                android:src="@drawable/sleep_box"
                 android:visibility="gone"
                 />
 
@@ -174,9 +177,8 @@
                 app:layout_constraintTop_toBottomOf="@id/nearestActBox"
                 android:text="@string/_month"
                 android:gravity="center"
-                android:textColor="@color/textcolor_greyblack"
                 android:layout_marginTop="20dp"
-                android:layout_marginStart="27dp"
+                android:layout_marginStart="25dp"
                 />
 
             <androidx.viewpager2.widget.ViewPager2
@@ -261,6 +263,5 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
