--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,5 +3,45 @@
     <style name="Base.Theme.HealthCheck" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="android:navigationBarColor">@color/black</item>
+        <item name="android:statusBarColor">@color/black</item>
+
     </style>
+
+    <style name="zagalovok1">
+        <item name="fontFamily">@font/inter_semibold</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/textcolor_white</item>
+    </style>
+
+    <style name="zagalovok2">
+        <item name="fontFamily">@font/inter_semibold</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/textcolor_white</item>
+    </style>
+
+    <style name="zagalovok3">
+        <item name="fontFamily">@font/inter_medium</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/textcolor_white</item>
+    </style>
+
+    <style name="diagramsDigitsStyle">
+        <item name="fontFamily">@font/inter_semibold</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/textcolor_white</item>
+    </style>
+
+    <style name="diagramsTextStyle">
+        <item name="fontFamily">@font/inter_semibold</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/textcolor_white</item>
+    </style>
+
+    <style name="tint1">
+        <item name="fontFamily">@font/inter_medium</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/tint_color_night</item>
+    </style>
+
 </resources>
