--- a/app/src/main/res/layout/fragment_add_medicines.xml
+++ b/app/src/main/res/layout/fragment_add_medicines.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/icon_profile"
+        android:src="@drawable/profile"
         android:background="@android:color/transparent"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="25dp"
