--- a/app/src/main/res/layout/fragment_heart.xml
+++ b/app/src/main/res/layout/fragment_heart.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/icon_profile"
+        android:src="@drawable/profile"
         android:background="@android:color/transparent"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="25dp"
@@ -90,7 +90,7 @@
         app:layout_constraintStart_toEndOf="@id/pressure_box"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/pressure_box"
-        android:src="@drawable/girth_box"
+        android:src="@drawable/box"
         android:background="@android:color/transparent"
         />
 
@@ -108,6 +108,7 @@
         android:textColor="@color/tint_color"
         />
 
+    <!--  тут заменил файл на box!-->
     <ImageButton
         android:id="@+id/down"
         android:layout_width="wrap_content"
@@ -115,7 +116,7 @@
         app:layout_constraintStart_toEndOf="@id/pressure_box"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/pressure_box"
-        android:src="@drawable/girth_box"
+        android:src="@drawable/box"
         android:background="@android:color/transparent"
         />
 
