--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -50,7 +50,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="@id/margin_main2"
                 app:layout_constraintTop_toTopOf="parent"
-                android:src="@drawable/icon_profile"
+                android:src="@drawable/profile"
                 android:background="@android:color/transparent"
                 android:layout_marginTop="30dp"
                 />
